- fix multiple support for :select form_ui with non-association columns

= 3.4.30
- move jquery-ui images to app/assets for rails 4.2 compatibility
- clean css so no need to reverse links on nested
- fix responds_to_parent with redirect

= 3.4.29
- fix for search_ui :multi_select on non-association column and non integer options
- ensure id for radio button is valid
- check foregin_type present, not only nil, on polymorphic associations

= 3.4.28
- don't stop on first associated record with error
- compatibility fix for composite primary keys gem
- fix double columns output on json and xml formats
- fix for search_ui :multi_select on non-association column

= 3.4.27
- support use_html option in columns for inplace_edit
- don't add errors added on update_record_from_params to flash[:warning], they are on errors array, keep errors from update_record_from_params when running valid?

= 3.4.26
- fix padding for dynamic action_group inside action_group
- fix using gem with symlink in BUNDLE_PATH option of config/bundle file

= 3.4.25
- call focus_first_element after highlight and trigger element_created
- fix restoring focus to element which triggers update column

= 3.4.24
- allow to set :controller in active_scaffold_record_select_autocomplete parameter or active_scaffold_input_text_options
- fix keeping focus after update_columns when focus was changed to a field which is going to be updated
- no autofocus first input if is inside .no-autofocus tag
- use active_scaffold_enum_options on select search_ui
- add submit_text option for field_search and search partials

= 3.4.23
- fix chosen on new subform rows
- add show_ui to column
- add :vertical and :horizontal show_ui for associations

= 3.4.22
- fix has_one/many tableless model through association
- fix check default value for checkboxes, so if record in subform, with checkbox, is left as default, is not saved, but setting checkbox would save record