@@ -149,7 +149,7 @@ module ActiveScaffold::Actions
     end
 
     def default_formats
-      [:html, :js, :json, :xml, :yaml]
+      [:html, :js, :json, :xml]
     end
 
     # Returns true if the client accepts one of the MIME types passed to it
@@ -176,7 +176,7 @@ module ActiveScaffold::Actions
       end
     end
 
-    # API response object that will be converted to XML/YAML/JSON using to_xxx
+    # API response object that will be converted to XML/JSON using to_xxx
     def response_object
       @response_object = successful? ? (@record || @records) : @record.errors
     end
@@ -332,15 +332,11 @@ module ActiveScaffold::Actions
     end
 
     def action_update_respond_to_xml
-      render :xml => successful? ? '' : response_object.to_xml(:only => list_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(list_columns_names), :methods => virtual_columns(list_columns_names)), :content_type => Mime::XML, :status => response_status
+      render :xml => successful? ? '' : response_object, :only => list_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(list_columns_names), :methods => virtual_columns(list_columns_names), :status => response_status
     end
 
     def action_update_respond_to_json
-      render :text => successful? ? '' : response_object.to_json(:only => list_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(list_columns_names), :methods => virtual_columns(list_columns_names)), :content_type => Mime::JSON, :status => response_status
-    end
-
-    def action_update_respond_to_yaml
-      render :text => successful? ? '' : Hash.from_xml(response_object.to_xml(:only => list_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(list_columns_names), :methods => virtual_columns(list_columns_names))).to_yaml, :content_type => Mime::YAML, :status => response_status
+      render :json => successful? ? '' : response_object, :only => list_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(list_columns_names), :methods => virtual_columns(list_columns_names), :status => response_status
     end
 
     def objects_for_etag
