@@ -24,15 +24,11 @@ module ActiveScaffold::Actions
     end
 
     def destroy_respond_to_xml
-      render :xml => successful? ? '' : response_object.to_xml(:only => active_scaffold_config.list.columns.names), :content_type => Mime::XML, :status => response_status
+      render :xml => successful? ? '' : response_object, :only => active_scaffold_config.list.columns.names, :status => response_status
     end
 
     def destroy_respond_to_json
-      render :text => successful? ? '' : response_object.to_json(:only => active_scaffold_config.list.columns.names), :content_type => Mime::JSON, :status => response_status
-    end
-
-    def destroy_respond_to_yaml
-      render :text => successful? ? '' : Hash.from_xml(response_object.to_xml(:only => active_scaffold_config.list.columns.names)).to_yaml, :content_type => Mime::YAML, :status => response_status
+      render :json => successful? ? '' : response_object, :only => active_scaffold_config.list.columns.names, :status => response_status
     end
 
     def destroy_find_record
